--- a/src/app/pages/offcial/privacy/privacy.component.html
+++ b/src/app/pages/offcial/privacy/privacy.component.html
@@ -5,34 +5,71 @@
         <mat-card-content>
           <h1>プライバシーポリシー</h1>
 
-          <p>弊社はお客様の個人情報をお預かりすることになりますが、そのお預かりした個人情報の取扱について、下記のように定め、保護に努めております。</p>
+          <p>
+            弊社は、弊社が運営するインターネットサービス「Remoju」（以下「本サービス」といいます。）の運営において、お客様の個人情報をお預かりする場合がございますが、そのお預かりした個人情報の取扱いについて、下記のように定め、保護に努めております。
+          </p>
 
-          <h4>【利用目的】</h4>
+          <h4>【収集する個人情報の範囲】</h4>
+          <p>
+            弊社は、本サービスの運営に際して、次に掲げるものを含むお客様の個人情報をお客様の同意のうえ、収集することがあります。
+          </p>
           <dl>
-            <dd>1)お問い合わせに対する回答を行うため</dd>
-            <dd>2)会員登録管理及びサービスのご提供のため</dd>
-            <dd>3)弊社のサービス、催し物のご案内のため</dd>
-            <dd>4)有料会員様向けの料金請求、課金計算のため</dd>
+            <dd>1)メールアドレス</dd>
+            <dd>2)会員のIDおよびパスワード</dd>
+            <dd>3)その他本サービス上に任意に入力されるその他の個人情報</dd>
           </dl>
 
-          <H4>【第三者への公開情報】</H4>
-          <p>お客様が弊社に届け出たID、ユーザー名、アイコン、自己紹介文その他登録基本情報、並びに公開を承諾した投稿情報（例:プランやレビュー）は、本サービスのウェブサイト・アプリ上で弊社が定める期間公開されます｡</p>
+          <h4>【利用目的】</h4>
+          <p>
+            弊社は、本サービスの安全かつ円滑な提供のために必要な範囲で収集した個人情報について、以下に掲げる目的のために利用するものとします
+          </p>
+          <dl>
+            <dd>1)お問い合わせに対する回答を行うため</dd>
+            <dd>2)会員登録管理及び本サービスのご提供のため</dd>
+            <dd>3)弊社のサービス、催し物のご案内のため</dd>
+            <dd>4)有料会員様向けの料金請求、課金計算のため</dd>
+            <dd>5)本サービスの品質向上のため</dd>
+            <dd>6)統計・調査のため</dd>
+          </dl>
+
+          <h4>【第三者への公開情報】</h4>
+          <p>
+            お客様が弊社に届け出たID、ユーザー名、アイコン、自己紹介文その他登録基本情報、並びに公開を承諾した投稿情報（例:プランやレビュー）は、本サービスのウェブサイト・アプリ上で弊社が定める期間公開されます｡
+          </p>
+
+          <h4>【位置情報】</h4>
+          <p>
+            本サービスを利用するために、モバイルデバイス上のアプリ等を通して位置情報データを収集、使用および共有することがあります。この位置情報データは、個人を特定せず、位置情報に基づくサービスを提供するために使用される形で匿名で収集されます。
+          </p>
 
           <h4>【個人情報の取扱い業務の委託】</h4>
           <p>
             弊社は事業運営上、お客様により良いサービスを提供するために業務の一部を外部に委託しており、業務委託先に対してお客様の個人情報を預けることがあります。この場合、個人情報を適切に取り扱っていると認められる委託先を選定し、契約等において個人情報の適正管理・機密保持などによりお客様の個人情報の漏洩防止に必要な事項を取決め、適切な管理を実施させます。
           </p>
 
-          <H4>【個人情報提出の任意性】</H4>
-          <p>お客様が弊社に対して個人情報を提出することは任意です。ただし、個人情報を提出されない場合には、弊社からの返信やサービスを実施ができない場合がありますので、あらかじめご了承ください。</p>
+          <h4>【安全管理措置】</h4>
+          <p>
+            当社は、収集した個人情報の取扱いにあたっては、組織的安全管理措置、人的安全管理措置、物理的安全管理措置、技術的安全管理措置を適切に行います。
+          </p>
+
+          <h4>【個人情報提出の任意性】</h4>
+          <p>
+            お客様が弊社に対して個人情報を提出することは任意です。ただし、個人情報を提出されない場合には、弊社からの返信やサービスを実施ができない場合がありますので、あらかじめご了承ください。
+          </p>
 
           <h4>【個人情報の開示請求について】</h4>
-          <p>お客様には、貴殿の個人情報の利用目的の通知、開示、訂正、追加、削除および利用又は提供の拒否権を要求する権利があります。</p>
+          <p>
+            お客様には、貴殿の個人情報の利用目的の通知、開示、訂正、追加、削除および利用又は提供の拒否権を要求する権利があり、当社は個人情報保護法に基づいて適切に対応いたします。
+          </p>
 
-          <div class="company">
-            運営：Ｒｅｍｏｊｕ株式会社（リモージュ カブシキガイシャ）
-          </div>
-
+          <p>個人情報に関するお問い合わせ窓口は以下となります。</p>
+          <dl>
+            <dd>住所 : 東京都港区芝浦４－１９－１</dd>
+            <dd>Remoju株式会社（リモージュ カブシキガイシャ）</dd>
+            <dd>TEL :</dd>
+            <dd>FAX :</dd>
+            <dd>Email : public@remoju.com</dd>
+          </dl>
         </mat-card-content>
       </mat-card>
     </mat-tab>
@@ -42,95 +79,156 @@
           <h1>ご利用規約</h1>
           <h4>第1条(用語の定義)</h4>
           <p>
-            「本サービス」とは、Ｒｅｍｏｊｕ株式会社（https://www.remoju.com/）（以下、「当社」といいます）が運営するインターネットサービス「Remoju」に関連して提供するウェブサイト、ソフトウェア、アプリケーションその他一切の製品およびサービスを指します。
-            本サービスにおける「投稿」とは、本サービスを通じて投稿された、テキスト、画像などのあらゆる情報を指します。「会員」とは、本サービスに会員登録をした者のことを指します。「利用者」とは、本サービスを利用するすべての者のことを指します。
+            本利用規約において使用する以下の用語の定義は、以下に定めるとおりとします。
           </p>
+          <p>
+            「本サービス」とは、Remoju株式会社（https://www.remoju.com/）（以下、「当社」といいます）が運営するインターネットサービス「Remoju」に関連して提供するウェブサイト、ソフトウェア、アプリケーションその他一切の製品およびサービスを指します。
+          </p>
+          <dl>
+            <dd><b>「投稿」</b>: 会員により、本サービスを通じて投稿された、テキスト、画像などのあらゆる情報を指します。</dd>
+            <dd><b>「会員」</b>: 本サービスに会員登録をした者のことを指します。</dd>
+            <dd><b>「利用者」</b>: 本サービスを利用するすべての者のことを指します。</dd>
+            <dd><b>「会員ID等」</b>:
+            本サービスに会員登録する際（外部SNSのアカウントを利用して会員登録する場合も含みます。）に、会員が設定するIDとパスワードの総称を指します。</dd>
+          </dl>
 
           <h4>第2条(規約への同意)</h4>
-          <p>本サービス利用者は、本サービスを利用し場合、Remoju利用規約に同意したものとみなされます。</p>
-
-          <h4>第３条（本規約の変更）</h4>
           <p>
-            当社は、利用者に事前に通知することなく、本規約の全部又は一部を変更でき、また本規約を補充する規約や特約を新たに定めることができるものとします。規約の変更・追加は、本サービスのウェブサイトに掲載した時点から効力を発するものとし、その後利用者が本サービスを利用した場合には、改定後の利用規約に同意したものとみなされます。変更後の内容に同意できない場合、本サービスの利用を直ちに終了してください。
+            利用者は、本サービスを利用する場合、本利用規約および別に定めるプライバシーポリシーに同意したものとみなされます。
           </p>
 
-          <h4>第４条（個人情報の利用）</h4>
-          <p>会員が当社に届け出たID、ユーザー名、アイコン、自己紹介文その他登録基本情報、並びに公開を承諾した投稿情報（例：プランやレビュー）は、本サービスのウェブサイト・アプリ上で当社が定める期間公開され、利用者が自由に閲覧することができます｡
-            また、届け出た個人情報については会員本人のみが自由に編集することができ、その内容について起因する損害についても当社は一切の責任を負わないものとします。</p>
-
-          <h4>第5条（著作権の保護）</h4>
+          <h4>第4条 (通知)</h4>
           <p>
-            本サービスによって提供する情報や掲載されている文章・画像・動画・ロゴ・データ・ソフトウェア等の著作権、商標権その他一切の権利は、当社もしくは正当な権利者に帰属します。本サービスに掲載されている内容のすべてまたは一部については、事前の承諾なく、譲渡、編集、使用、複製、転載等をおこなうことはできません。
+            1.
+            当社から会員および利用者への通知は、本サービスのウェブサイト上に掲載する方法等、当社が適当と判断する方法により行います。当該通知は、本サービスのウェブサイト上に掲載等がなされた時点から効力を生じるものとします。
+          </p>
+          <p>
+            2.
+            会員および利用者は、本サービスの利用にあたり常に最新の内容を確認するものとし、通知の未確認、サービス利用環境の不具合による通知の不着または遅延によって生じた損害または不利益を当社に対して主張または請求することはできないものとします。
           </p>
 
-          <h4>第6条(退会)</h4>
+          <h4>第5条（本規約の変更）</h4>
           <p>
-            会員が本サービスの退会を希望する場合には、会員本人が所定の退会手続きを行うものとします。会員は、退会時に本サービス利用に関する一切の特典を失うものとします。また、本サービスを退会した場合も、会員がそれまでに投稿したコンテンツは削除されず、著作権を含むいっさいの権利は当社に移行します。それらを避けたい場合は、会員本人が退会前に投稿の削除等を自ら行うものとします。
-            また、当社は会員が退会した場合も当社が受領した有料コンテンツの料金その他の金員を返還しません｡</p>
+            当社は、利用者に事前に通知することなく、本利用規約の全部または一部を変更でき、また本利用規約を補充する規約や特約を新たに定めることができるものとします。規約の変更・追加は、本サービスのウェブサイトに掲載した時点から効力を発するものとし、その後利用者が本サービスを利用した場合には、改定後の利用規約に同意したものとみなされます。変更後の内容に同意できない場合、本サービスの利用を直ちに終了してください。
+          </p>
 
-          <h4>第7条(免責)</h4>
+          <h4>第6条（個人情報の利用）</h4>
+          <p>
+            1.会員が当社に届け出た会員ID等、ユーザー名、年代、性別、アイコン、自己紹介文その他登録基本情報、および公開を承諾した投稿（例：プランやレビュー）は、本サービスのウェブサイト・アプリ上で当社が定める期間公開され、利用者が自由に閲覧することができます｡
+            また、届け出た個人情報については会員本人のみが自由に編集することができ、その内容について起因する損害についても当社は一切の責任を負わないものとします。
+          </p>
+          <p>
+            2.当社は、会員から提供された個人情報を別に定めるプライバシーポリシーで定めた目的の範囲で利用できるものとし、会員は、当社がプライバシーポリシーに従って会員の個人情報を取扱うことについて同意するものとします。
+          </p>
+
+          <h4>第7条（著作権の保護）</h4>
+          <p>
+            本サービスによって提供する情報や掲載されている文章・画像・動画・ロゴ・データ・ソフトウェア等の著作権、商標権その他一切の権利は、当社もしくは正当な権利者に帰属します。本サービスに掲載されている内容の全部または一部については、事前の承諾なく、譲渡、編集、使用、複製、転載等をおこなうことはできません。
+          </p>
+
+          <h4>第8条(退会)</h4>
+          <p>
+            会員が本サービスの退会を希望する場合には、会員本人が所定の退会手続きを行うものとします。会員は、退会時に本サービス利用に関する一切の特典を失うものとします。また、会員は退会までに行った投稿の削除を行うものとし、当社は会員が退会までに行った投稿の削除は行わず、著作権を含む一切の権利は当社に移転します。また、当社は会員が退会した場合も、当社が会員から退会までに受領した有料コンテンツの料金その他の金員を返還しません｡
+          </p>
+
+          <h4>第9条(免責)</h4>
           <ol type="1">
             <li>
-              当社は、本サービス内での投稿や広告を含むいかなる情報において、情報の正確性、違法性を確認、保証する義務を負わず、それらに起因する損害についても一切の責任を負わないものとします。本サービスからリンクされているウェブサイトおよび本サービス上に掲載されている広告からリンクされているウェブサイトについても、内容が正確であること、違法性がないこと、公序良俗に反する内容を含まないものであることなどを一切保証いたしません。
-            </li>
-            <li> 利用者は自らの責任において本サービスを利用し、本サービス上の行為に対する紛争や調整、損害賠償の請求などに関しては自らの費用と責任で対応するものとします。</li>
-            <li>
-              当社は、本サービスの文章、画像、その他一切のデータの保存に関して保証しないものとします。また、本サービスで保存されたデータの消失や変更に対する紛争、損害賠償に関しては一切を免責されるものとします。会員は、投稿した情報を自らの責任において保存・管理し、消失に備えるものとします。
+              当社は、本サービス内での投稿や広告を含む一切の情報について、情報の正確性、違法性を確認、保証する義務を負わず、それらに起因する損害についても一切の責任を負わないものとします。本サービスからリンクされているウェブサイトおよび本サービス上に掲載されている広告からリンクされているウェブサイトについても、内容が正確であること、違法性がないこと、公序良俗に反する内容を含まないものであることなどを一切保証いたしません。
             </li>
             <li>
-              当社は、投稿などに関し法令もしくは本規約に違反するおそれがあると当社が認めた場合、または業務上の必要性がある場合には、あらかじめ利用者に通知することなく、投稿を含むいっさいの情報を編集、削除することができます。それらに起因する損害についても一切の責任を負わないものとします。
+              利用者は自らの責任において本サービスを利用し、本サービスの利用に起因する紛争や損害賠償の請求などに関しては、自らの費用と責任で対応するものとします。
             </li>
             <li>
-              当社は、利用者に事前に通知することなく、当社判断で、サービスの全部又は一部を一時中断あるいは廃止・停止および変更できるものとします。これにより利用者に損害等が発生したとしても、当社は一切責任を負わないものとします。
+              当社は、本サービスの文章、画像、その他一切のデータの保存義務を負わないものとします。また、当社は、本サービスで保存されたデータの消失や変更について一切の責任を負わないものとします。会員は、投稿した情報を自らの責任において保存・管理し、消失に備えるものとします。
             </li>
             <li>
-              会員は、利用者IDと設定されたパスワードを管理する責任を負うものとし、これらを第三者に利用させてはならないものとします。パスワードの第三者による不正使用により会員に不利益または損害が発生したとしても、当社は一切責任を負わないものとします。
+              当社は、投稿が法令もしくは本利用規約に違反するおそれがあると認めた場合、または業務上の必要性がある場合には、あらかじめ利用者に通知することなく、投稿を含む一切の情報を編集、削除することができます。当社は、これらに起因する損害についても一切の責任を負わないものとします。
             </li>
-            <li> 会員は、入会時において届け出た事項に変更が生じた場合には、速やかに会員情報の編集ページ等を通じて当社に通知しなければならないものとします。</li>
-          </ol>
-          <p>
-            会員が会員情報の変更届出を怠り当社からの通知が遅滞又は不到達となった場合にも、当該通知が到達したとみなされます。また、会員情報の変更届出を怠ったことによって会員に生じた損害について当社は一切の責任を負わないものとします。
-          </p>
-
-          <h4>第8条(位置情報について)</h4>
-          <p>本サービスでは、利用者の位置情報を当社が取得します。
-            また、取得した位置情報は本サービス内で使用され、第三者に提供される場合があります。それにより生じた損害について、当社は一切の責任を負わないものとします。</p>
-
-          <h4>第9条(投稿の権利について)</h4>
-          <p>会員による本サービスへの投稿についての権利は、会員が独自に作成した情報は投稿した会員に帰属します。
-            ただし、会員は、当社に対して、投稿を無償で日本の国内外において利用すること（媒体を問わず公開または頒布、インターネット配信、技術の進歩により将来生じうる一切の利用およびこれらに付随する複製、編集、改編、翻訳、翻案ならびにそれらのサブライセンス権を含みます。）を独占排他的に許諾します。なお、当社は、投稿を利用するにあたり投稿の全部または一部を、削除、改変、要約することができるものとします。また、会員は、当社又は当社から再利用許諾を受けた第三者に対して著作者人格権を行使しないものとします。
-          </p>
-
-          <h4>第10条(禁止行為)</h4>
-          <p>
-            当社は、会員および利用者が、本サービスの利用にあたって、以下の行為を行うことを禁じます。当社は、会員が下記のいずれかに該当したと判断した場合、事前の通知なく、会員資格の取消やサービスへのアクセスの拒否、将来に亘って当社が提供するサービスの利用を禁止することができることとし、
-            投稿の全部もしくは一部の削除、などの措置をとることができるものとします。その場合、当社はその理由を説明する義務を負わず、本条の措置により生じる一切の損害について責任を負わないものとします。</p>
-          <ol type="a">
-            <li> 当社が提供するアプリケーション、当社が保有するサーバー及びこれらが生成する情報、通信内容等の解読、解析、逆コンパイル、逆アセンブルまたはリバースエンジニアリング</li>
-            <li> 当社または第三者の権利（著作権、商標権その他の知的財産権、プライバシー権、肖像権その他法令上の権利を広く含む）を侵害する権利</li>
-            <li> 本サイトの趣旨から逸脱する投稿をする行為</li>
-            <li> 当社または第三者に対する誹謗中傷、脅迫、いやがらせ、名誉を毀損する行為</li>
-            <li> 公序良俗に反する情報を投稿する行為</li>
-            <li> 一般公開されていない個人宅の住所を掲載する行為</li>
-            <li> 法律上風俗営業に分類される店舗情報を掲載する行為</li>
-            <li> 特定の宗教や思想団体への勧誘を目的とする投稿や行為</li>
-            <li> 反社会的勢力に対する協力行為</li>
-            <li> 当社に対し虚偽の届出を行う行為</li>
-            <li> 迷惑メール、チェーンメール、ウィルス等有害なプログラム・スクリプト類を含むものを投稿または使用・送信する行為もしくは本サービスの円滑な運営やシステム等に影響を与える行為</li>
-            <li> 当社または第三者のサーバーに負担をかける行為もしくは攻撃する行為</li>
-            <li> 法令に違反する行為、またはその恐れがある行為</li>
-            <li> 他の利用者、第三者、または当社の名義を騙る投稿やなりすまし行為</li>
-            <li> 本サービスの趣旨に関係のない他人または団体の名称・メールアドレス・住所・電話番号等を投稿する行為</li>
-            <li> 犯罪的行為に結びつく投稿や行為</li>
-            <li> その他、当社が不適当と判断する行為</li>
+            <li>
+              当社は、利用者に事前に通知することなく、当社判断で、サービスの全部または一部を一時中断あるいは廃止・停止および変更できるものとします。これにより利用者に損害が発生したとしても、当社は一切責任を負わないものとします。
+            </li>
+            <li>
+              会員は、会員IDと設定されたパスワードを管理する責任を負うものとし、これらを第三者に開示し、または利用させてはならないものとします。会員ID等の第三者による不正使用によって、当社に損害が生じた場合には、当該会員はその損害の一切について賠償する責任を負うものとします。
+            </li>
+            <li>
+              会員は、入会時において届け出た事項に変更が生じた場合には、速やかに会員情報の編集ページを通じて当社に通知しなければならないものとします。会員が会員情報の変更届出を怠り、当社からの通知が遅滞または不到達となった場合にも、当該通知が到達したとみなされます。また、会員情報の変更届出を怠ったことによって、会員に生じた損害について当社は一切の責任を負わないものとします。
+            </li>
           </ol>
 
+          <h4>第10条(位置情報について)</h4>
+          <p>
+            本サービスでは、利用者の位置情報を当社が取得します。
+            また、取得した位置情報は本サービス内で使用され、個人が特定されない方法により、第三者に提供される場合があります。それにより生じた損害について、当社は一切の責任を負わないものとします。
+          </p>
 
-          <h4>第11条(準拠法・裁判管轄)</h4>
-          <p>本規約は、日本法を準拠とし、解釈されるものとします。
-            また本サービスと利用者の間の訴訟が生じた場合、東京地方裁判所を第一審の専属管轄裁判所とします。</p>
+          <h4>第11条(投稿の権利について)</h4>
+          <ol type="1">
+            <li>
+              会員による本サービスへの投稿のうち、会員が独自に作成した情報は当該投稿をした会員に帰属します。
+              ただし、会員は、当社に対して、投稿を無償で日本の国内外において利用すること（媒体を問わず公開または頒布、インターネット配信、技術の進歩により将来生じうる一切の利用およびこれらに付随する複製、編集、改編、翻訳、翻案ならびにそれらのサブライセンス権を含みます。）を許諾します。なお、当社は、投稿を利用するにあたり投稿の全部または一部を、削除、改変、要約することができるものとします。また、会員は、当社または当社から再利用許諾を受けた第三者に対して著作者人格権を行使しないものとします。
+            </li>
 
-          <p style="text-align: right;">以上</p>
+            <li>
+              会員は、本サービス上で行った投稿について、自らが提供その他送信することにつき、適法な権利を有していること、および当該投稿が第三者の権利を侵害していないことについて、当社に対して保証するものとします。
+            </li>
+          </ol>
+
+          <h4>第12条(禁止行為)</h4>
+          <ol type="1">
+            <li>
+              当社は、会員および利用者が、本サービスの利用にあたって、以下の行為を行うことを禁じます。当社は、会員および利用者が下記のいずれかに該当する行為をしたと判断した場合、事前の通知なく、会員資格の取消や本サービスへのアクセスの拒否、将来にわたって当社が提供するサービスの利用を禁止することができることとし、
+              投稿の全部もしくは一部の削除などの措置をとることができるものとします。その場合、当社はその理由を説明する義務を負わず、本条の措置により生じる一切の損害について責任を負わないものとします。
+
+              <ol type="a">
+                <li>
+                  当社が提供するアプリケーション、当社が保有するサーバー及びこれらが生成する情報、通信内容等の解読、解析、逆コンパイル、逆アセンブルまたはリバースエンジニアリング
+                </li>
+                <li>
+                  当社または第三者の権利（著作権、商標権その他の知的財産権、プライバシー権、肖像権その他法令上の権利を広く含む）を侵害する権利
+                </li>
+                <li>本サイトの趣旨から逸脱する投稿をする行為</li>
+                <li>
+                  当社または第三者に対する誹謗中傷、脅迫、いやがらせ、名誉を毀損する行為
+                </li>
+                <li>公序良俗に反する情報を投稿する行為</li>
+                <li>一般公開されていない個人宅の住所を掲載する行為</li>
+                <li>法律上風俗営業に分類される店舗情報を掲載する行為</li>
+                <li>特定の宗教や思想団体への勧誘を目的とする投稿や行為</li>
+                <li>反社会的勢力に対する協力行為</li>
+                <li>当社に対し虚偽の届出を行う行為</li>
+                <li>
+                  迷惑メール、チェーンメール、ウィルス等有害なプログラム・スクリプト類を含むものを投稿または使用・送信する行為もしくは本サービスの円滑な運営やシステム等に影響を与える行為
+                </li>
+                <li>
+                  当社または第三者のサーバーに負担をかける行為もしくは攻撃する行為
+                </li>
+                <li>法令に違反する行為、またはその恐れがある行為</li>
+                <li>
+                  他の利用者、第三者、または当社の名義を騙る投稿やなりすまし行為
+                </li>
+                <li>
+                  本サービスの趣旨に関係のない他人または団体の名称・メールアドレス・住所・電話番号等を投稿する行為
+                </li>
+                <li>犯罪的行為に結びつく投稿や行為</li>
+                <li>その他、当社が不適当と判断する行為</li>
+              </ol>
+            </li>
+            <li>会員および利用者が、前項の禁止行為を行ったことによって、当社に損害が生じた場合には、当該会員または利用者は、当社に生じた一切の損害を賠償する責任を負うものとします。</li>
+          </ol>
+
+          <h4>第13条(分離可能性)</h4>
+          <p>本利用規約のいずれかの規定またはその一部が、法令等により無効または執行不能と判断された場合であっても、無効または執行不能と判断された規定以外の規定については、継続して完全に効力を有するものとします。</p>
+
+          <h4>第14条(協議)</h4>
+          <p>本利用規約に規定のない事項および規定された項目について疑義が生じた場合、会員ならびに利用者および当社は誠意をもって協議の上解決するものとします。</p>
+
+          <h4>第15条(準拠法・裁判管轄)</h4>
+          <p>
+            本利用規約は、日本法を準拠とし、解釈されるものとします。 また本サービスと利用者の間の訴訟が生じた場合、東京地方裁判所を第一審の専属的合意管轄裁判所とします。
+          </p>
+
+          <p style="text-align: right">以上</p>
 
           <div class="company">
             Ｒｅｍｏｊｕ株式会社（リモージュ カブシキガイシャ）
