--- a/src/app/pages/offcial/privacy/privacy.component.scss
+++ b/src/app/pages/offcial/privacy/privacy.component.scss
@@ -3,11 +3,16 @@
     text-align: center;
     font-size: 24px;
   }
-  
+
   dl,dd{
     margin: unset;
+    line-height: 1.7;
   }
-  
+
+  ol,li{
+    line-height: 1.7;
+  }
+
   .company{
     font-size: 110%;
   }
