--- a/src/app/pages/offcial/privacy/privacy.component.html
+++ b/src/app/pages/offcial/privacy/privacy.component.html
@@ -231,7 +231,7 @@
           <p style="text-align: right">以上</p>
 
           <div class="company">
-            Ｒｅｍｏｊｕ株式会社（リモージュ カブシキガイシャ）
+            Remoju株式会社（リモージュ カブシキガイシャ）
           </div>
         </mat-card-content>
       </mat-card>
