--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -10,6 +10,7 @@
             alt="remoju-app"
           />
         </a>
+        <img src="../../../assets/img/icon_beta.svg" class="beta" alt="beta" width="42"/>
       </span>
 
       <span class="menu">
