--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
@@ -20,7 +20,7 @@
           alt=""
         />
         <button mat-button class="reset" (click)="inputClear()">
-          <img src="../../../../../assets/img/reset_btn.svg" alt="reset" />
+          <img src="../../../../../assets/img/btn_cancel.svg" alt="reset" />
         </button>
       </div>
     </div>
