--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
@@ -19,8 +19,8 @@
           src="../../../../../assets/img/keyword-search.svg"
           alt=""
         />
-        <button mat-button class="reset" (click)="inputClear()">
-          <img src="../../../../../assets/img/btn_cancel.svg" alt="reset" />
+        <button mat-button class="reset" (click)="inputClear()" *ngIf="condition.keyword!==''">
+          <img src="../../../../../assets/img/reset_btn.svg" alt="reset" />
         </button>
       </div>
     </div>
