--- a/src/app/pages/offcial/privacy/privacy.component.html
+++ b/src/app/pages/offcial/privacy/privacy.component.html
@@ -1,78 +1,5 @@
 <div class="box">
   <mat-tab-group id="privacy">
-    <mat-tab label="プライバシーポリシー">
-      <mat-card>
-        <mat-card-content>
-          <h1>プライバシーポリシー</h1>
-
-          <p>
-            弊社は、弊社が運営するインターネットサービス「Remoju」（以下「本サービス」といいます。）の運営において、お客様の個人情報をお預かりする場合がございますが、そのお預かりした個人情報の取扱いについて、下記のように定め、保護に努めております。
-          </p>
-
-          <h4>【収集する個人情報の範囲】</h4>
-          <p>
-            弊社は、本サービスの運営に際して、次に掲げるものを含むお客様の個人情報をお客様の同意のうえ、収集することがあります。
-          </p>
-          <dl>
-            <dd>1)メールアドレス</dd>
-            <dd>2)会員のIDおよびパスワード</dd>
-            <dd>3)その他本サービス上に任意に入力されるその他の個人情報</dd>
-          </dl>
-
-          <h4>【利用目的】</h4>
-          <p>
-            弊社は、本サービスの安全かつ円滑な提供のために必要な範囲で収集した個人情報について、以下に掲げる目的のために利用するものとします
-          </p>
-          <dl>
-            <dd>1)お問い合わせに対する回答を行うため</dd>
-            <dd>2)会員登録管理及び本サービスのご提供のため</dd>
-            <dd>3)弊社のサービス、催し物のご案内のため</dd>
-            <dd>4)有料会員様向けの料金請求、課金計算のため</dd>
-            <dd>5)本サービスの品質向上のため</dd>
-            <dd>6)統計・調査のため</dd>
-          </dl>
-
-          <h4>【第三者への公開情報】</h4>
-          <p>
-            お客様が弊社に届け出たID、ユーザー名、アイコン、自己紹介文その他登録基本情報、並びに公開を承諾した投稿情報（例:プランやレビュー）は、本サービスのウェブサイト・アプリ上で弊社が定める期間公開されます｡
-          </p>
-
-          <h4>【位置情報】</h4>
-          <p>
-            本サービスを利用するために、モバイルデバイス上のアプリ等を通して位置情報データを収集、使用および共有することがあります。この位置情報データは、個人を特定せず、位置情報に基づくサービスを提供するために使用される形で匿名で収集されます。
-          </p>
-
-          <h4>【個人情報の取扱い業務の委託】</h4>
-          <p>
-            弊社は事業運営上、お客様により良いサービスを提供するために業務の一部を外部に委託しており、業務委託先に対してお客様の個人情報を預けることがあります。この場合、個人情報を適切に取り扱っていると認められる委託先を選定し、契約等において個人情報の適正管理・機密保持などによりお客様の個人情報の漏洩防止に必要な事項を取決め、適切な管理を実施させます。
-          </p>
-
-          <h4>【安全管理措置】</h4>
-          <p>
-            当社は、収集した個人情報の取扱いにあたっては、組織的安全管理措置、人的安全管理措置、物理的安全管理措置、技術的安全管理措置を適切に行います。
-          </p>
-
-          <h4>【個人情報提出の任意性】</h4>
-          <p>
-            お客様が弊社に対して個人情報を提出することは任意です。ただし、個人情報を提出されない場合には、弊社からの返信やサービスを実施ができない場合がありますので、あらかじめご了承ください。
-          </p>
-
-          <h4>【個人情報の開示請求について】</h4>
-          <p>
-            お客様には、貴殿の個人情報の利用目的の通知、開示、訂正、追加、削除および利用又は提供の拒否権を要求する権利があり、当社は個人情報保護法に基づいて適切に対応いたします。
-          </p>
-
-          <p>個人情報に関するお問い合わせ窓口は以下となります。</p>
-          <dl>
-            <dd>住所 : 東京都港区芝浦４－１９－１</dd>
-            <dd>Remoju株式会社（リモージュ カブシキガイシャ）</dd>
-            <dd>TEL :</dd>
-            <dd>FAX :</dd>
-            <dd>Email : public@remoju.com</dd>
-          </dl>
-        </mat-card-content>
-      </mat-card>
-    </mat-tab>
     <mat-tab label="ご利用規約">
       <mat-card>
         <mat-card-content>
@@ -95,6 +22,11 @@
           <h4>第2条(規約への同意)</h4>
           <p>
             利用者は、本サービスを利用する場合、本利用規約および別に定めるプライバシーポリシーに同意したものとみなされます。
+          </p>
+
+          <h4>第3条(会員登録)</h4>
+          <p>
+            1.	本サービスにおいて投稿を行う場合には、当社の定めた方法に従って会員登録をするものとします。
           </p>
 
           <h4>第4条 (通知)</h4>
@@ -233,6 +165,77 @@
           <div class="company">
             Remoju株式会社（リモージュ カブシキガイシャ）
           </div>
+        </mat-card-content>
+      </mat-card>
+    </mat-tab>
+    <mat-tab label="プライバシーポリシー">
+      <mat-card>
+        <mat-card-content>
+          <h1>プライバシーポリシー</h1>
+
+          <p>
+            弊社は、弊社が運営するインターネットサービス「Remoju」（以下「本サービス」といいます。）の運営において、お客様の個人情報をお預かりする場合がございますが、そのお預かりした個人情報の取扱いについて、下記のように定め、保護に努めております。
+          </p>
+
+          <h4>【収集する個人情報の範囲】</h4>
+          <p>
+            弊社は、本サービスの運営に際して、次に掲げるものを含むお客様の個人情報をお客様の同意のうえ、収集することがあります。
+          </p>
+          <dl>
+            <dd>1)メールアドレス</dd>
+            <dd>2)会員のIDおよびパスワード</dd>
+            <dd>3)その他本サービス上に任意に入力されるその他の個人情報</dd>
+          </dl>
+
+          <h4>【利用目的】</h4>
+          <p>
+            弊社は、本サービスの安全かつ円滑な提供のために必要な範囲で収集した個人情報について、以下に掲げる目的のために利用するものとします
+          </p>
+          <dl>
+            <dd>1)お問い合わせに対する回答を行うため</dd>
+            <dd>2)会員登録管理及び本サービスのご提供のため</dd>
+            <dd>3)弊社のサービス、催し物のご案内のため</dd>
+            <dd>4)有料会員様向けの料金請求、課金計算のため</dd>
+            <dd>5)本サービスの品質向上のため</dd>
+            <dd>6)統計・調査のため</dd>
+          </dl>
+
+          <h4>【第三者への公開情報】</h4>
+          <p>
+            お客様が弊社に届け出たID、ユーザー名、アイコン、自己紹介文その他登録基本情報、並びに公開を承諾した投稿情報（例:プランやレビュー）は、本サービスのウェブサイト・アプリ上で弊社が定める期間公開されます｡
+          </p>
+
+          <h4>【位置情報】</h4>
+          <p>
+            本サービスを利用するために、モバイルデバイス上のアプリ等を通して位置情報データを収集、使用および共有することがあります。この位置情報データは、個人を特定せず、位置情報に基づくサービスを提供するために使用される形で匿名で収集されます。
+          </p>
+
+          <h4>【個人情報の取扱い業務の委託】</h4>
+          <p>
+            弊社は事業運営上、お客様により良いサービスを提供するために業務の一部を外部に委託しており、業務委託先に対してお客様の個人情報を預けることがあります。この場合、個人情報を適切に取り扱っていると認められる委託先を選定し、契約等において個人情報の適正管理・機密保持などによりお客様の個人情報の漏洩防止に必要な事項を取決め、適切な管理を実施させます。
+          </p>
+
+          <h4>【安全管理措置】</h4>
+          <p>
+            当社は、収集した個人情報の取扱いにあたっては、組織的安全管理措置、人的安全管理措置、物理的安全管理措置、技術的安全管理措置を適切に行います。
+          </p>
+
+          <h4>【個人情報提出の任意性】</h4>
+          <p>
+            お客様が弊社に対して個人情報を提出することは任意です。ただし、個人情報を提出されない場合には、弊社からの返信やサービスを実施ができない場合がありますので、あらかじめご了承ください。
+          </p>
+
+          <h4>【個人情報の開示請求について】</h4>
+          <p>
+            お客様には、貴殿の個人情報の利用目的の通知、開示、訂正、追加、削除および利用又は提供の拒否権を要求する権利があり、当社は個人情報保護法に基づいて適切に対応いたします。
+          </p>
+
+          <p>個人情報に関するお問い合わせ窓口は以下となります。</p>
+          <dl>
+            <dd>住所 : 東京都港区芝浦４－１９－１</dd>
+            <dd>Remoju株式会社（リモージュ カブシキガイシャ）</dd>
+            <dd>Email : public@remoju.com</dd>
+          </dl>
         </mat-card-content>
       </mat-card>
     </mat-tab>
