--- a/src/app/pages/planspot/planspot.component.html
+++ b/src/app/pages/planspot/planspot.component.html
@@ -12,8 +12,14 @@
   (reset)="conditionReset()"
 >
 </app-planspot-selector>
-<div *ngIf="condition?.select !== 'google'" class="list-header">
-  {{ "PlanSpotList" | translate }}
+<div *ngIf="condition?.select !== 'google' && condition?.select === 'all'" class="list-header">
+  {{ "AllListHeader" | translate }}
+</div>
+<div *ngIf="condition?.select !== 'google' && condition?.select === 'plan'" class="list-header">
+  {{ "PlanListHeader" | translate }}
+</div>
+<div *ngIf="condition?.select !== 'google' && condition?.select === 'spot'" class="list-header">
+  {{ "SpotListHeader" | translate }}
 </div>
 
 <ng-container *ngIf="condition?.select !== 'google'; else gresult">
