--- a/src/app/pages/offcial/privacy/privacy.component.html
+++ b/src/app/pages/offcial/privacy/privacy.component.html
@@ -12,11 +12,21 @@
             「本サービス」とは、Remoju株式会社（https://www.remoju.com/）（以下、「当社」といいます）が運営するインターネットサービス「Remoju」に関連して提供するウェブサイト、ソフトウェア、アプリケーションその他一切の製品およびサービスを指します。
           </p>
           <dl>
-            <dd><b>「投稿」</b>: 会員により、本サービスを通じて投稿された、テキスト、画像などのあらゆる情報を指します。</dd>
-            <dd><b>「会員」</b>: 本サービスに会員登録をした者のことを指します。</dd>
-            <dd><b>「利用者」</b>: 本サービスを利用するすべての者のことを指します。</dd>
-            <dd><b>「会員ID等」</b>:
-            本サービスに会員登録する際（外部SNSのアカウントを利用して会員登録する場合も含みます。）に、会員が設定するIDとパスワードの総称を指します。</dd>
+            <dd>
+              <b>「投稿」</b>:
+              会員により、本サービスを通じて投稿された、テキスト、画像などのあらゆる情報を指します。
+            </dd>
+            <dd>
+              <b>「会員」</b>: 本サービスに会員登録をした者のことを指します。
+            </dd>
+            <dd>
+              <b>「利用者」</b>:
+              本サービスを利用するすべての者のことを指します。
+            </dd>
+            <dd>
+              <b>「会員ID等」</b>:
+              本サービスに会員登録する際（外部SNSのアカウントを利用して会員登録する場合も含みます。）に、会員が設定するIDとパスワードの総称を指します。
+            </dd>
           </dl>
 
           <h4>第2条(規約への同意)</h4>
@@ -26,7 +36,8 @@
 
           <h4>第3条(会員登録)</h4>
           <p>
-            1.	本サービスにおいて投稿を行う場合には、当社の定めた方法に従って会員登録をするものとします。
+            1.
+            本サービスにおいて投稿を行う場合には、当社の定めた方法に従って会員登録をするものとします。
           </p>
 
           <h4>第4条 (通知)</h4>
@@ -146,18 +157,25 @@
                 <li>その他、当社が不適当と判断する行為</li>
               </ol>
             </li>
-            <li>会員および利用者が、前項の禁止行為を行ったことによって、当社に損害が生じた場合には、当該会員または利用者は、当社に生じた一切の損害を賠償する責任を負うものとします。</li>
+            <li>
+              会員および利用者が、前項の禁止行為を行ったことによって、当社に損害が生じた場合には、当該会員または利用者は、当社に生じた一切の損害を賠償する責任を負うものとします。
+            </li>
           </ol>
 
           <h4>第13条(分離可能性)</h4>
-          <p>本利用規約のいずれかの規定またはその一部が、法令等により無効または執行不能と判断された場合であっても、無効または執行不能と判断された規定以外の規定については、継続して完全に効力を有するものとします。</p>
+          <p>
+            本利用規約のいずれかの規定またはその一部が、法令等により無効または執行不能と判断された場合であっても、無効または執行不能と判断された規定以外の規定については、継続して完全に効力を有するものとします。
+          </p>
 
           <h4>第14条(協議)</h4>
-          <p>本利用規約に規定のない事項および規定された項目について疑義が生じた場合、会員ならびに利用者および当社は誠意をもって協議の上解決するものとします。</p>
+          <p>
+            本利用規約に規定のない事項および規定された項目について疑義が生じた場合、会員ならびに利用者および当社は誠意をもって協議の上解決するものとします。
+          </p>
 
           <h4>第15条(準拠法・裁判管轄)</h4>
           <p>
-            本利用規約は、日本法を準拠とし、解釈されるものとします。 また本サービスと利用者の間の訴訟が生じた場合、東京地方裁判所を第一審の専属的合意管轄裁判所とします。
+            本利用規約は、日本法を準拠とし、解釈されるものとします。
+            また本サービスと利用者の間の訴訟が生じた場合、東京地方裁判所を第一審の専属的合意管轄裁判所とします。
           </p>
 
           <p style="text-align: right">以上</p>
@@ -236,6 +254,30 @@
             <dd>Remoju株式会社（リモージュ カブシキガイシャ）</dd>
             <dd>Email : public@remoju.com</dd>
           </dl>
+        </mat-card-content>
+      </mat-card>
+    </mat-tab>
+    <mat-tab label="運営会社">
+      <mat-card class="about">
+        <mat-card-content>
+          <h1>運営会社</h1>
+          <ul>
+            <li>
+              <span class="title">会社名</span>Ｒｅｍｏｊｕ株式会社（リモージュ
+              カブシキガイシャ）
+            </li>
+            <li><span class="title">設立</span>2019年8月</li>
+            <li><span class="title">所在地</span>東京都港区芝浦４－１９－１</li>
+            <li><span class="title">資本金</span>5,000万円</li>
+            <li><span class="title">法人番号</span>0104-01-147809</li>
+            <li><span class="title">役員</span>代表取締役　中井稔哉</li>
+            <li><span class="title">スタッフ数</span>6名</li>
+            <li>
+              <span class="title">目的</span
+              ><br />Webアプリケーション等の企画開発運営、インターネットを活用した情報提供、マーケティング、旅行業、宿泊施設運営等
+            </li>
+            <li><span class="title">特許</span>第5871082号</li>
+          </ul>
         </mat-card-content>
       </mat-card>
     </mat-tab>
