--- a/src/app/pages/offcial/privacy/privacy.component.scss
+++ b/src/app/pages/offcial/privacy/privacy.component.scss
@@ -16,4 +16,22 @@
   .company{
     font-size: 110%;
   }
+
+  .about{
+    ul {
+  list-style: none;
+  padding: 20px;
+  border-bottom: 1px solid #ccc;
+  li {
+    line-height: 2;
+    border-top: 1px solid #ccc;
+    padding: 1em 0;
+    span.title {
+      display: inline-block;
+      width: 86px;
+      font-weight: 800;
+    }
+  }
+}
+  }
 }
