--- a/src/app/layout/root/root.component.html
+++ b/src/app/layout/root/root.component.html
@@ -78,6 +78,7 @@
   <mat-sidenav-container autosize>
     <mat-sidenav
       #sidenav
+      position="end"
       mode="over"
       [(opened)]="opened"
       [fixedInViewport]="true"
