--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
@@ -290,7 +290,7 @@
         }
 
         .buttons {
-          flex-basis: 48%;
+          flex-basis: 160px;
           height: 37px;
           display: flex;
 
