--- a/src/app/parts/nav-menu/nav-menu.component.scss
+++ b/src/app/parts/nav-menu/nav-menu.component.scss
@@ -6,7 +6,7 @@
   //background-color: $color-remoju;
   //color: #fff;
   background-color: #fff;
-  @media screen and (min-width: 1025px) { 
+  @media screen and (min-width: 1025px) {
     width: 50%;
   }
 
@@ -18,7 +18,7 @@
     height: 41px;
 
     img {
-      width: 39%;
+      //width: 39%;
       margin-top: 4px;
       margin-left: 10px;
     }
