--- a/src/app/parts/nav-menu/nav-menu.component.html
+++ b/src/app/parts/nav-menu/nav-menu.component.html
@@ -53,10 +53,10 @@
           "AddNewPlan" | translate
         }}</a>
         <a mat-list-item (click)="onNavgate('planspot')">{{
-          "みんなのおすすめから作る" | translate
+          "AddNewfromRecommended" | translate
         }}</a>
         <a mat-list-item (click)="onNavgate('mypage', 'favorite')">{{
-          "SearchByFavorite" | translate
+          "ViewFavorite" | translate
         }}</a>
       </mat-nav-list>
     </mat-nav-list>
