--- a/src/app/parts/myplan-plan-edit-dialog/myplan-plan-edit-dialog.component.html
+++ b/src/app/parts/myplan-plan-edit-dialog/myplan-plan-edit-dialog.component.html
@@ -4,7 +4,7 @@
   </div>
   <!-- プラン名 -->
   <mat-form-field appearance="outline">
-    <mat-label>{{ "PlanName" | translate }}</mat-label>
+    <mat-label>{{ "PlanNameEx" | translate }}</mat-label>
     <textarea
       matInput
       #planName
