--- a/src/app/pages/offcial/guide/guide.component.scss
+++ b/src/app/pages/offcial/guide/guide.component.scss
@@ -1,6 +1,19 @@
 .container {
   box-sizing: border-box;
   overflow-x: hidden;
+  position: relative;
+
+  .playVideo{
+    position:fixed;
+    top:87px;
+    right: calc((100% - 998px) / 2);
+    cursor: pointer;
+    z-index: 101;
+    @media screen and (max-width: 428px) {
+      top: 48px;
+      right: 16px;
+    }
+  }
 
   #load__mask {
     background-color: #5f6c68;
@@ -12,6 +25,13 @@
     height: 100vh;
     width: 100%;
 
+    video{
+      display: block;
+      width: 100vw;
+      height: 100vh;
+      //object-fit: cover;
+    }
+
     &.reval {
       height: 0;
       opacity: 0;
@@ -21,6 +41,55 @@
       width: 0;
       transition: transform 1s cubic-bezier(0.19, 1, 0.22, 1) 0s,
         opacity 0s linear 1s, width 0s linear 1s, height 0s linear 1s;
+    }
+
+    &.scale-out-center {
+      -webkit-animation: scale-out-center 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+              animation: scale-out-center 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+    }
+    /**
+    * ----------------------------------------
+    * animation scale-out-center
+    * ----------------------------------------
+    */
+    @-webkit-keyframes scale-out-center {
+      0% {
+        -webkit-transform: scale(1);
+                transform: scale(1);
+        opacity: 1;
+      }
+      100% {
+        -webkit-transform: scale(0);
+                transform: scale(0);
+        opacity: 1;
+      }
+    }
+    @keyframes scale-out-center {
+      0% {
+        -webkit-transform: scale(1);
+                transform: scale(1);
+        opacity: 1;
+      }
+      100% {
+        -webkit-transform: scale(0);
+                transform: scale(0);
+        opacity: 1;
+      }
+    }
+
+    .closeVideo{
+      position: absolute;
+      top: 16px;
+      right: 16px;
+      width: 40px;
+      height: 40px;
+      cursor: pointer;
+      z-index: 100;
+      ::ng-deep.mat-button-wrapper{
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 
