--- a/src/app/pages/offcial/guide/guide.component.html
+++ b/src/app/pages/offcial/guide/guide.component.html
@@ -5,12 +5,12 @@
     </button>
 
       <video *ngIf="!isMobile" #video preload="auto" autoplay loop controls>
-        <source src="../../../../assets/img/guide/IMG_0.mp4" type="video/mp4" />
+        <source src="https://remojuv4.blob.core.windows.net/images/video/IMG_0.mp4" type="video/mp4" />
       </video>
 
 
       <video *ngIf="isMobile" #video preload="auto" autoplay loop controls>
-        <source src="../../../../assets/img/guide/IMG_1.mp4" type="video/mp4" />
+        <source src="https://remojuv4.blob.core.windows.net/images/video/IMG_1.mp4" type="video/mp4" />
       </video>
 
   </div>
