--- a/src/app/pages/mypage-favoritelist/mypage-favoritelist.component.html
+++ b/src/app/pages/mypage-favoritelist/mypage-favoritelist.component.html
@@ -1,5 +1,5 @@
 <!-- マイページお気に入り一覧 -->
-<app-planspot-selector
+<!-- app-planspot-selector
   [count]="count"
   [condition]="condition"
   [mSort]="$mSort"
@@ -8,7 +8,7 @@
   (event)="onPlanSpotChange($event)"
   (sort)="sortChange($event)"
 >
-</app-planspot-selector>
+</app-planspot-selector-->
 <div
   class="rows"
   infinite-scroll
