--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -1809,8 +1809,8 @@ form {
   //justify-content: center;
   //justify-content: space-evenly;
   background-color: #fff;
-  position: sticky;
-  bottom: -105px;
+  // position: sticky;
+  // bottom: -105px;
   z-index: 20;
 
   .row1 {
