--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
@@ -2,6 +2,7 @@
   <mat-card-content>
     <div class="row title" *ngIf="!myFavorite">
       {{ "FindEveryoneRecommendations" | translate }}
+      <span>{{ "FindEveryoneRecommendations2" | translate }}</span>
     </div>
     <div class="row" *ngIf="!myFavorite">
       <div class="input">
@@ -46,7 +47,7 @@
           type="radio"
           value="plan"
           (change)="onSwitchPlanSpot($event)"
-          [checked]="condition.select ? condition.select === 'plan' : false"
+          [checked]="condition.select!==null ? condition.select === 'plan' : false"
         />
         <label for="plan" class="plan">Plan</label>
         <input
@@ -55,7 +56,7 @@
           type="radio"
           value="spot"
           (change)="onSwitchPlanSpot($event)"
-          [checked]="condition.select ? condition.select === 'spot' : false"
+          [checked]="condition.select!==null ? condition.select === 'spot' : false"
         />
         <label for="spot" class="spot" value="spot">Spot</label>
         <ng-container *ngIf="!myFavorite">
